--- a/styles/index.css
+++ b/styles/index.css
@@ -69,7 +69,7 @@ main h1 {
 
 .card-title {
     text-align: center;
-    background-color: var(--auburn);
+    background-color: var(--blood-red);
     color: var(--alice-blue);
     padding: 16px;
 }
